--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -41,11 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ASA.cs" />
     <Compile Include="DiGraph.cs" />
     <Compile Include="ParallelImplySameSideInteriorSupplementary.cs" />
-    <Compile Include="PebblerHypergraph.cs" />
     <Compile Include="MainProgram.cs" />
+    <Compile Include="PebblerHypergraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransitiveSubstitution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
