Added Circle-Circle Intersection Calculation

--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assumption.cs" />
+    <Compile Include="ConcreteAST\Desciptors\CircleIntersection.cs" />
     <Compile Include="ConcreteAST\Desciptors\CircleSegmentIntersection.cs" />
     <Compile Include="ConcreteAST\Figures\Circle.cs" />
     <Compile Include="JustificationSwitch.cs" />
