Began moving some clause creation code to the front end. Created the ProblemDescription as a way to pass information to the back end.

--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Precomputer\ClauseConstructor.cs" />
     <Compile Include="Precomputer\PointFactory.cs" />
     <Compile Include="ProblemAnalyzer\MultiGoalProblem.cs" />
+    <Compile Include="ProblemDescription.cs" />
     <Compile Include="StatisticsGenerator\HardCodedFigureAnalyzerMain.cs" />
     <Compile Include="StatisticsGenerator\FigureStatisticsAggregator.cs" />
     <Compile Include="StatisticsGenerator\ActualProblem.cs" />
