--- a/Main/SilverlightClient/SilverlightClient.2010.csproj
+++ b/Main/SilverlightClient/SilverlightClient.2010.csproj
@@ -155,6 +155,9 @@
     <Resource Include="..\DynamicGeometryLibrary\Resources\ParseOptions.png">
       <Link>ParseOptions.png</Link>
     </Resource>
+    <Resource Include="..\DynamicGeometryLibrary\Resources\MarkRegion.png">
+      <Link>MarkRegion.png</Link>
+    </Resource>
     <Content Include="ServiceReferences.ClientConfig" />
   </ItemGroup>
   <ItemGroup>
