--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -347,6 +347,7 @@
     <Compile Include="UI\ParseGroupWindow.cs" />
     <Compile Include="UI\ParseOptionsWindow.cs" />
     <Compile Include="UI\ProblemCharacteristicsWindow.cs" />
+    <Compile Include="UI\RegionShading\ShadedRegionCreator.cs" />
     <Compile Include="UI\Ribbon\BehaviorToolButton.cs" />
     <Compile Include="UI\Ribbon\ButtonGrid.cs" />
     <Compile Include="UI\Ribbon\CommandToolButton.cs" />
