--- a/Main/TestApp/TestApp.csproj
+++ b/Main/TestApp/TestApp.csproj
@@ -47,6 +47,9 @@
     <Compile Include="MainProgram.cs" />
     <Compile Include="Obsolete\PebblerHypergraph.cs" />
     <Compile Include="Problems\ProofProblems\ActualProofProblem.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page162Problem20.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem01to05.cs" />
+    <Compile Include="Problems\ProofProblems\Jurgensen Geometry %28Orange%29\Quadrilaterals\Page166Problem13.cs" />
     <Compile Include="Problems\ShadedAreaProblems\ActualShadedAreaProblem.cs" />
     <Compile Include="Problems\ShadedAreaProblems\PathologicalTester.cs" />
     <Compile Include="Problems\ShadedAreaProblems\RegionTester.cs" />
