UI EnterSolutionWindow where users can enter solutions and receive hints.
Currently button is there under Parsing, but window does not open. It's just blank white.

EnterSolutionWindow.cs
Toolbar.cs
UI.cs

--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Controls\Controls.Toolkit\Common\LengthConverter.cs" />
     <Compile Include="Controls\Controls.Toolkit\WrapPanel\OrientedSize.cs" />
     <Compile Include="Controls\Controls.Toolkit\WrapPanel\WrapPanel.cs" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="Data\Demo\CircumscribedCircle.xml" />
     <None Include="Data\Demo\Demo.xml" />
     <None Include="Data\Demo\LocusSample.xml" />
@@ -304,6 +305,7 @@
     <Compile Include="UI\AddParseGroupWindow.cs" />
     <Compile Include="UI\AIDebugWindow.cs" />
     <Compile Include="UI\BehaviorOrderer.cs" />
+    <Compile Include="UI\EnterSolutionWindow.cs" />
     <Compile Include="UI\CommandSystem\Command.cs" />
     <Compile Include="UI\CommandSystem\CompositeCommandObserver.cs" />
     <Compile Include="UI\CommandSystem\ICommand.cs" />
