UI EnterSolutionWindow where users can enter solutions and receive hints.
Window works, but window is just a simple test window.

EnterSolutionWindow.cs
Toolbar.cs
UI.cs
Page.cs

--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -319,6 +319,7 @@
     <Compile Include="UI\AddParseGroupWindow.cs" />
     <Compile Include="UI\AIDebugWindow.cs" />
     <Compile Include="UI\BehaviorOrderer.cs" />
+    <Compile Include="UI\EnterSolutionWindow.cs" />
     <Compile Include="UI\CommandSystem\Command.cs" />
     <Compile Include="UI\CommandSystem\CompositeCommandObserver.cs" />
     <Compile Include="UI\CommandSystem\ICommand.cs" />
